# StudySpot

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  demo_dashboard.html  presentation_material.html  presentation_material.html.metadata.json  presentation_material.md  presentation_material.md.metadata.json  process_data.py  product_poster.html  slide_3_4.html
.github/ISSUE_TEMPLATE/: bug_report.md  task_template.md
bridge/: mock_publisher.py  mqtt_to_firebase.py
datalogs/: sensor_data_103454.js  sensor_data_lap.js  sensor_data_meeting.js  sensor_data_ml415.js  sensor_log_20260530_103454.csv  sensor_log_20260530_lap.csv  sensor_log_formatted.html  sensor_log_formatted_20260530_103454.html  sensor_log_formatted_20260530_lap.html  sensor_log_meetingRoom.csv  sensor_log_ml415_study.csv  sensor_log_student_council_meeting.csv  sensor_stats.txt  sensor_stats_20260530_103454.txt  sensor_stats_20260530_lap.txt
docs/: implementation_plan_phase2.md  master_plan.md  ppt_presentation_guide.md  presentation.html
node/: main.cpp  test_logic.cpp
node/drivers/: BleSniffer.hpp  DhtSensor.hpp  PirSensor.hpp  SoundSensor.hpp
node/interfaces/: BaseSensor.hpp  SensorData.hpp
node/services/: AcousticCategorizer.hpp  DataAggregator.hpp  DataLogger.hpp  MqttClient.hpp  OccupancyFusion.hpp
